--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@tanstack/react-query": "^5.8.7",
     "axios": "^1.6.2",
     "firebase": "^10.6.0",
+    "flowbite": "^2.2.0",
+    "flowbite-react": "^0.7.0",
     "formik": "^2.4.5",
     "localforage": "^1.10.0",
     "lottie-react": "^2.4.0",
@@ -22,7 +24,9 @@
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.0",
+    "react-tabs": "^6.0.2",
     "react-toastify": "^9.1.3",
+    "react-youtube": "^10.1.0",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.10.1"
   },
