--- a/package.json
+++ b/package.json
@@ -20,15 +20,18 @@
     "lottie-react": "^2.4.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
+    "react-awesome-slider": "^4.1.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
+    "react-image-gallery": "^1.3.0",
     "react-router-dom": "^6.20.0",
     "react-tabs": "^6.0.2",
     "react-toastify": "^9.1.3",
     "react-youtube": "^10.1.0",
     "sort-by": "^1.2.0",
-    "sweetalert2": "^11.10.1"
+    "sweetalert2": "^11.10.1",
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
