--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lottie-react": "^2.4.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
+    "react-accessible-accordion": "^5.0.0",
     "react-awesome-slider": "^4.1.0",
     "react-carousel": "^4.3.0",
     "react-datepicker": "^4.23.0",
